2012-03-21 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* support/regression/tests/gcc-torture-execute-92*,
	  support/regression/tests/gcc-torture-execute-93*,
	  support/regression/tests/gcc-torture-execute-94*:
	  Added some more tests from the execute part of the gcc torture regression test suite.

2012-03-20 Borut Razem <borut.razem AT gmail.com>

	* src/mcs51/gen.c, src/SDCCasm.c, src/SDCCasm.h, src/z80/gen.c,
	  src/SDCCutil.c, src/ds390/gen.c, src/hc08/gen.c:
	  code claning, optimization, ...

2012-03-20 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* device/include/stdint.h,
	  device/include/string.h,
	  device/include/stddef.h,
	  device/include/stdlib.h,
	  device/include/stdio.h,
	  device/include/time.h,
	  device/include/errno.h:
	  rsize_t, errno_t, constraint_handler_t, RSIZE_MAX from annex K (bounds-checking) of the C11 standard.

2012-03-19 Borut Razem <borut.razem AT gmail.com>

	* src/SDCC.lex, doc/sdccman.lyx: removed asm() pseudo function
	  since it is not standard-compliant

2012-03-19 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCCpeeph.c:
	  Handle gbz80 (hl+) and (hl-).

2012-03-19 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* support/regression/Makefile.in,
	  support/regression/collate-results.py: Summarize any failures in a
	  nicer format instead of all run together on one line
	* src/ds390/gen.c (genPlusIncr): fix problem with dereferencing a
	  generic pointer via a struct losing pointer type byte

2012-03-18 Borut Razem <borut.razem AT gmail.com>

	* doc/sdccman.lyx,src/avr/gen.c, src/ds390/gen.c,
	  src/hc08/gen.c, src/mcs51/gen.c, src/pic14/gen.c,
	  src/pic16/device.c, src/pic16/gen.c, src/pic16/glue.c,
	  src/pic16/pcode.c, src/SDCC.lex, src/SDCC.y, src/SDCCast.c,
	  src/SDCCglue.c, src/SDCCsymt.h, src/SDCCutil.c,
	  src/SDCCutil.h, src/SDCCval.c:
	  implemented feature request #2815320 - please add asm()
	  pseudo function as alternate